[package]
name = "termetheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde =  {version = "1.0.144", features = ["derive"] }
mockall = "0.10.2"
serde_json = "1.0.85"
tui = "0.19"
crossterm = "0.25"
chrono = "0.4"
mockito = "0.31.0"
regex = "1"
